--- a/CRUD_Contactos/gestorContactos/templates/index.html
+++ b/CRUD_Contactos/gestorContactos/templates/index.html
@@ -8,6 +8,25 @@
   </head>
   <body>
     <h1>Lista de Contactos</h1>
+    <br>
+    <table class="table table-hover">
+        <thead>
+        <tr>
+            <th scope="col">#</th>
+            <th scope="col">Nombre</th>
+            <th scope="col">Numero</th>
+            <th scope="col">Email</th>
+        </tr>
+        </thead>
+        <tbody>
+            {% for contacto in contactos %}
+                <th scope="row">{{ contacto.id }}</th>
+                <td>{{ contacto.nombre }}</td>
+                <td>{{ contacto.numero }}</td>
+                <td>{{ contacto.email }}</td>
+            {% endfor %}
+        </tbody>
+    </table>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
 </html>
