--- a/CRUD_Contactos/gestorContactos/contactos/templates/contactos/create.html
+++ b/CRUD_Contactos/gestorContactos/contactos/templates/contactos/create.html
@@ -12,15 +12,16 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   </head>
   <body>
-    <h1>Añadir Contacto</h1>
+    <h1>{{ title }}</h1>
     <br>
-    <a href="{% url 'contactos_list' %}">Inicio</a>
+    <a class="btn btn-warning" href="{% url 'contactos_list' %}">Inicio</a>
     <br>
+    <p></p>
     <form method="post">
         {% csrf_token %}
         {{ form.as_p }}
         <a href="{% url 'contactos_list' %}">
-            <input  type="submit" onclick="fnsave()">
+            <input class="btn btn-success" type="submit" onclick="fnsave()">
         </a>
 
     </form>
